--- a/DartsApp/app/src/main/res/values/strings.xml
+++ b/DartsApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">DartsApplication</string>
+    <string name="background">Background</string>
+    <string name="start_game">Start Game</string>
+    <string name="number_of_legs">Number of Legs</string>
+    <string name="best_of">Best of</string>
+    <string name="first_to">First to</string>
+    <string name="legs">Legs</string>
+    <string name="sets">Sets</string>
+    <string name="name_player_2">Name Player 2</string>
+    <string name="player_1">Name Player 1</string>
+    <string name="_501">501</string>
 </resources>
