--- a/DartsApp/app/src/main/res/values/strings.xml
+++ b/DartsApp/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="_501">501</string>
     <string name="throw_for_the_bull">Throw for the Bull</string>
     <string name="select_player_closest_to_bull">Select player closest to Bull</string>
+    <string name="todo">TODO</string>
 </resources>
