--- a/DartsApp/app/src/main/res/values/strings.xml
+++ b/DartsApp/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="darts_31">Darts: 31</string>
     <string name="avg_130">Avg: 130</string>
     <string name="avg_180">Avg: 180</string>
+    <string name="_0">0</string>
 </resources>
