--- a/DartsApp/app/src/main/res/values/strings.xml
+++ b/DartsApp/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="avg_180">Avg: 180</string>
     <string name="_0">0</string>
     <string name="textview">TextView</string>
+    <string name="title_activity_stats">Stats</string>
 </resources>
