--- a/DartsApp/app/src/main/res/values/strings.xml
+++ b/DartsApp/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="_0">0</string>
     <string name="textview">TextView</string>
     <string name="title_activity_stats">Stats</string>
+    <string name="endGame">End Game Statistics</string>
 </resources>
